--- a/PantryPal/Views/Ingredients/AddIngredients/AddIngredients.xib
+++ b/PantryPal/Views/Ingredients/AddIngredients/AddIngredients.xib
@@ -39,9 +39,9 @@
                         <constraint firstAttribute="width" constant="191" id="nxP-jl-449"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
-                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="食材過期時間" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GPd-Ei-O4j" userLabel="calendarTextField">
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="食材過期時間" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GPd-Ei-O4j" userLabel="calendarTextField">
                     <rect key="frame" x="145" y="125" width="147" height="34"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="147" id="Vk9-aA-ucR"/>
@@ -52,7 +52,7 @@
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="食材名稱" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ILd-CN-bbp" userLabel="nameTextField">
                     <rect key="frame" x="31" y="41" width="299" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
                 </textField>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="249" image="watermelon" translatesAutoresizingMaskIntoConstraints="NO" id="tTr-dl-5cl">
                     <rect key="frame" x="31" y="92" width="100" height="99"/>
@@ -91,10 +91,10 @@
                         <segment title="常溫"/>
                     </segments>
                 </segmentedControl>
-                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="商品條碼" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LhY-Bf-wMs">
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="商品條碼（選填）" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LhY-Bf-wMs">
                     <rect key="frame" x="31" y="294" width="231" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y5x-6E-kfs">
                     <rect key="frame" x="278" y="300" width="25" height="22"/>
@@ -140,7 +140,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V76-2Z-S5D">
-                    <rect key="frame" x="324" y="6" width="30" height="30"/>
+                    <rect key="frame" x="6" y="6" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="G36-Vx-KB4"/>
                         <constraint firstAttribute="width" constant="30" id="cFf-gI-Ngj"/>
@@ -151,6 +151,20 @@
                         <action selector="closeView" destination="iN0-l3-epB" eventType="touchUpInside" id="yY4-q5-I7p"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通知" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WE7-Dt-nth">
+                    <rect key="frame" x="37" y="362.66666666666669" width="22.666666666666671" height="13.333333333333314"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_ios_share_black_48pt" translatesAutoresizingMaskIntoConstraints="NO" id="T6X-rc-Sib">
+                    <rect key="frame" x="192" y="342" width="35" height="25"/>
+                    <color key="tintColor" red="0.28025144340000002" green="0.16780781750000001" blue="0.08490211517" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="35" id="FU9-V0-Rte"/>
+                        <constraint firstAttribute="height" constant="25" id="bh5-EP-Urd"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -161,7 +175,6 @@
                 <constraint firstItem="JEf-Q6-xsV" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="7" id="4pV-Tg-rof"/>
                 <constraint firstItem="tTr-dl-5cl" firstAttribute="top" secondItem="ILd-CN-bbp" secondAttribute="bottom" constant="17" id="7O2-yd-xHX"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="60" id="7YN-1I-KAj"/>
-                <constraint firstAttribute="trailing" secondItem="V76-2Z-S5D" secondAttribute="trailing" constant="6" id="8Eb-R1-1ZT"/>
                 <constraint firstItem="BB7-DO-nWO" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="8" symbolic="YES" id="8mN-Fo-wY3"/>
                 <constraint firstItem="GPd-Ei-O4j" firstAttribute="leading" secondItem="tTr-dl-5cl" secondAttribute="trailing" constant="14" id="AEp-pX-a3M"/>
                 <constraint firstItem="Hcf-Ps-YWc" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="8" symbolic="YES" id="Aev-H3-t9U"/>
@@ -190,16 +203,24 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Lcl-Jp-Lao" secondAttribute="trailing" constant="24" id="dPw-vs-CfL"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="BB7-DO-nWO" secondAttribute="bottom" constant="27" id="dct-8O-Xd3"/>
                 <constraint firstItem="ILd-CN-bbp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="41" id="dhj-wz-Fi9"/>
+                <constraint firstItem="WE7-Dt-nth" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="37" id="eIu-m2-RxZ"/>
                 <constraint firstItem="Lcl-Jp-Lao" firstAttribute="top" secondItem="Cge-Vu-M2L" secondAttribute="bottom" constant="10" id="gCH-Ly-zPl"/>
+                <constraint firstItem="V76-2Z-S5D" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="hWe-ai-yOM"/>
                 <constraint firstItem="JEf-Q6-xsV" firstAttribute="leading" secondItem="Cds-nq-7QG" secondAttribute="trailing" constant="8" symbolic="YES" id="iHu-tU-4co"/>
+                <constraint firstItem="7hJ-Fg-5P5" firstAttribute="leading" secondItem="WE7-Dt-nth" secondAttribute="trailing" constant="85.329999999999998" id="io8-s0-zJm"/>
                 <constraint firstItem="7hJ-Fg-5P5" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="8" symbolic="YES" id="iyv-OR-m9j"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="72" id="kkz-At-XFn"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="WE7-Dt-nth" secondAttribute="bottom" constant="24" id="lHQ-lw-gRb"/>
+                <constraint firstItem="WE7-Dt-nth" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="34.670000000000002" id="m13-fR-7tr"/>
                 <constraint firstItem="Lcl-Jp-Lao" firstAttribute="leading" secondItem="BB7-DO-nWO" secondAttribute="trailing" constant="15" id="mTq-uG-QLa"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="WE3-rj-TXM" secondAttribute="trailing" id="n6N-NX-Po4"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="T6X-rc-Sib" secondAttribute="trailing" constant="133" id="nRf-Ez-EBN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Y5x-6E-kfs" secondAttribute="trailing" constant="57" id="omr-bf-UVJ"/>
                 <constraint firstItem="Cge-Vu-M2L" firstAttribute="leading" secondItem="GPd-Ei-O4j" secondAttribute="trailing" constant="8" symbolic="YES" id="oyp-cy-Ps2"/>
+                <constraint firstItem="T6X-rc-Sib" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="14" id="pY7-WP-zSH"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="Hcf-Ps-YWc" secondAttribute="bottom" constant="27" id="qz3-l1-0Or"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Y5x-6E-kfs" secondAttribute="bottom" constant="78" id="rZh-vb-FpY"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="T6X-rc-Sib" secondAttribute="bottom" constant="33" id="tbk-kh-fyp"/>
                 <constraint firstItem="LhY-Bf-wMs" firstAttribute="top" secondItem="u5j-Ol-ygX" secondAttribute="bottom" constant="12" id="tfA-aV-p0j"/>
                 <constraint firstItem="Cds-nq-7QG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="32" id="ut6-Sa-kgn"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="WE3-rj-TXM" secondAttribute="bottom" id="vYS-M8-hdr"/>
@@ -234,6 +255,7 @@
         <image name="checkmark.circle.fill" catalog="system" width="128" height="123"/>
         <image name="clock.fill" catalog="system" width="128" height="123"/>
         <image name="cross 1" width="3532" height="3527"/>
+        <image name="outline_ios_share_black_48pt" width="48" height="48"/>
         <image name="watermelon" width="80" height="80"/>
         <namedColor name="AccentColor">
             <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
