--- a/PantryPal/Views/Ingredients/CreateFridgeView/CreateFridgeView.xib
+++ b/PantryPal/Views/Ingredients/CreateFridgeView/CreateFridgeView.xib
@@ -28,15 +28,6 @@
                         <color key="titleColor" systemColor="labelColor"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHg-Ae-pu6">
-                    <rect key="frame" x="307" y="10" width="30" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="30" id="1eG-qt-ahU"/>
-                        <constraint firstAttribute="height" constant="30" id="ILC-pd-hWZ"/>
-                    </constraints>
-                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" image="cross 1"/>
-                </button>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入新創冰箱名稱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaQ-3Z-K1y">
                     <rect key="frame" x="68" y="106" width="210" height="34"/>
                     <color key="backgroundColor" white="0.91002877331002319" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -47,10 +38,24 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_ios_share_black_48pt" translatesAutoresizingMaskIntoConstraints="NO" id="CbF-fp-0Yb">
+                    <rect key="frame" x="160" y="205" width="25" height="20"/>
+                    <color key="tintColor" red="0.28025144340000002" green="0.16780781750000001" blue="0.08490211517" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHg-Ae-pu6">
+                    <rect key="frame" x="6" y="6" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="1eG-qt-ahU"/>
+                        <constraint firstAttribute="height" constant="30" id="ILC-pd-hWZ"/>
+                    </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" image="cross 1"/>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="CbF-fp-0Yb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="160" id="2Vi-Xx-es6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TSb-CU-YQU" secondAttribute="trailing" id="6L6-4Q-gD5"/>
                 <constraint firstItem="BaQ-3Z-K1y" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="68" id="BW4-gi-nCs"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1Yg-x5-VuF" secondAttribute="bottom" constant="94" id="Jfm-wz-LTY"/>
@@ -58,11 +63,14 @@
                 <constraint firstItem="1Yg-x5-VuF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="123" id="WKd-tC-xRq"/>
                 <constraint firstItem="1Yg-x5-VuF" firstAttribute="top" secondItem="BaQ-3Z-K1y" secondAttribute="bottom" constant="61" id="XZv-EI-Lge"/>
                 <constraint firstItem="TSb-CU-YQU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="cVk-o0-rfp"/>
-                <constraint firstItem="cHg-Ae-pu6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="f1i-Gw-eCA"/>
+                <constraint firstItem="cHg-Ae-pu6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="e7z-gl-P9b"/>
+                <constraint firstItem="CbF-fp-0Yb" firstAttribute="top" secondItem="BaQ-3Z-K1y" secondAttribute="bottom" constant="65" id="iVh-Qd-lgN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1Yg-x5-VuF" secondAttribute="trailing" constant="124" id="jCZ-dz-i1o"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CbF-fp-0Yb" secondAttribute="trailing" constant="162" id="lBj-C7-LuW"/>
                 <constraint firstAttribute="bottom" secondItem="TSb-CU-YQU" secondAttribute="bottom" id="mFf-vX-eXM"/>
                 <constraint firstItem="TSb-CU-YQU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="o1m-yf-mZU"/>
-                <constraint firstAttribute="trailing" secondItem="cHg-Ae-pu6" secondAttribute="trailing" constant="10" id="xhV-kj-Uf8"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="CbF-fp-0Yb" secondAttribute="bottom" constant="102" id="ydW-TS-Njf"/>
+                <constraint firstItem="cHg-Ae-pu6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="zmH-wL-dNj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -77,6 +85,7 @@
         <image name="Button圖示１" width="1947" height="621"/>
         <image name="card2" width="1920" height="1080"/>
         <image name="cross 1" width="3532" height="3527"/>
+        <image name="outline_ios_share_black_48pt" width="48" height="48"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
