--- a/PantryPal/Views/Join/Join.storyboard
+++ b/PantryPal/Views/Join/Join.storyboard
@@ -47,6 +47,9 @@
                                                     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" title="Cancel"/>
+                                                    <connections>
+                                                        <action selector="rejectButtonTaaped" destination="l2f-zH-L6I" eventType="touchUpInside" id="azw-QO-Asd"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zzg-t2-SXC">
                                                     <rect key="frame" x="287" y="7" width="63" height="32"/>
