--- a/PantryPal/Views/Ingredients/IngredientsCell/IngredientsTableViewCell.xib
+++ b/PantryPal/Views/Ingredients/IngredientsCell/IngredientsTableViewCell.xib
@@ -18,7 +18,7 @@
                 <subviews>
                     <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l5S-sR-JUf" userLabel="background">
                         <rect key="frame" x="12" y="12" width="369" height="116"/>
-                        <color key="backgroundColor" red="0.82715305949562623" green="0.9774167886214884" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" image="watermelon" translatesAutoresizingMaskIntoConstraints="NO" id="Vb0-8p-Djb">
                         <rect key="frame" x="22" y="20" width="100" height="100"/>
